updated links and copy

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,3 +121,28 @@
   position: fixed;
 
 }
+
+a {
+  color: blue;
+}
+
+tr {
+  text-align: left;
+  font-size: 20px;
+  border: 2px solid lightgrey;
+
+  }
+
+th {
+  background-color: #e3e6ed;
+  border: 2px solid lightgrey;
+  padding: 10px;
+}
+
+ td {
+   background-color: white;
+   border-left: 2px solid lightgrey;
+   border-collapse: collapse;
+   text-align: center;
+   padding: 10px;
+ }
